// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login Unit Tests should match the snapshot 1`] = `
<section
  className="mission-card"
>
  <article
    className="belief-card card"
  >
    <div
      className="facts"
    >
      <h2
        className="belief-header"
      >
        Facts
      </h2>
      <p
        className="login-p"
      >
        cats were once worshipped as gifts from the gods
      </p>
      <p
        className="login-p"
      >
        science cannot explain the purr of a cat
      </p>
      <p
        className="login-p"
      >
        cats can see the unseeable
      </p>
      <p
        className="login-p"
      >
        cats always land on their feet, due to their innate anti-gravity properties
      </p>
      <p
        className="login-p"
      >
        if you hold a cats ears back, they look like aliens, dawg
      </p>
    </div>
    <h2
      className="belief-header"
    >
      Terms of Use
    </h2>
    <p
      className="login-p"
    >
      due to the sensitive nature and the secretive acquisition of the information you are about to research, you must agree to utmost secrecy.
    </p>
  </article>
  <form
    className="binding-contract"
  >
    <label
      hidden={true}
      htmlFor="name"
    >
      Name: 
    </label>
    <input
      className="user-name-input"
      name="name"
      onChange={[Function]}
      placeholder="Your Name"
      type="text"
      value=""
    />
    <div
      className="radio-div"
    >
      <input
        className="agree-radio"
        name="hasAgreed"
        onClick={[Function]}
        type="radio"
      />
      <label
        className="agree-label"
        htmlFor="hasAgreed"
      >
        I Agree
      </label>
    </div>
    <p
      className="complete-p"
    >
      Complete the form to proceed
    </p>
  </form>
</section>
`;

exports[`Login Unit Tests should match the snapshot when the is state is complete 1`] = `
<section
  className="mission-card"
>
  <article
    className="belief-card card"
  >
    <div
      className="facts"
    >
      <h2
        className="belief-header"
      >
        Facts
      </h2>
      <p
        className="login-p"
      >
        cats were once worshipped as gifts from the gods
      </p>
      <p
        className="login-p"
      >
        science cannot explain the purr of a cat
      </p>
      <p
        className="login-p"
      >
        cats can see the unseeable
      </p>
      <p
        className="login-p"
      >
        cats always land on their feet, due to their innate anti-gravity properties
      </p>
      <p
        className="login-p"
      >
        if you hold a cats ears back, they look like aliens, dawg
      </p>
    </div>
    <h2
      className="belief-header"
    >
      Terms of Use
    </h2>
    <p
      className="login-p"
    >
      due to the sensitive nature and the secretive acquisition of the information you are about to research, you must agree to utmost secrecy.
    </p>
  </article>
  <form
    className="binding-contract"
  >
    <label
      hidden={true}
      htmlFor="name"
    >
      Name: 
    </label>
    <input
      className="user-name-input"
      name="name"
      onChange={[Function]}
      placeholder="Your Name"
      type="text"
      value="Davey Havok"
    />
    <div
      className="radio-div"
    >
      <input
        className="agree-radio"
        name="hasAgreed"
        onClick={[Function]}
        type="radio"
      />
      <label
        className="agree-label"
        htmlFor="hasAgreed"
      >
        I Agree
      </label>
    </div>
    <Link
      to="/research"
    >
      <button
        className="start-btn"
        onClick={[Function]}
        type="button"
      >
        Start Research
      </button>
    </Link>
  </form>
</section>
`;
